# FLPCP-For-Inner-Product

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  README.md  main.cpp
circuit/: inner_product_circuit.cpp  inner_product_circuit.h  inner_product_circuit.hpp
experiments/: multi_party_computation.hpp  network.hpp  performance_measurement.cpp  performance_measurement.hpp  three_party_computation.cpp  three_party_computation.h  three_party_computation.hpp  two_party_computation.cpp  two_party_computation.h  two_party_computation.hpp  two_party_simulation.hpp
figure/: plot.py  polter.py
log/: fliop.txt  fliop_3pc.txt  fliop_6pc.txt  fliop_9pc.txt  fliop_coefficient_3pc.txt  fliop_coefficient_6pc.txt  fliop_coefficient_9pc.txt  flpcp.txt
math/: mpint32.cpp  mpint32.hpp  mpint64.cpp  mpint64.h  mpint64.hpp  polynomial.cpp  polynomial.h  polynomial.hpp  sha512.hpp  square_matrix.hpp
unit/: interactive_proof.cpp  interactive_proof.h  interactive_proof.hpp  proof.cpp  proof.h  proof.hpp  query.cpp  query.h  query.hpp
